# super_sudoku_solver

./: .gitignore  LICENSE  MANIFEST.in  WIP.ebuild  __main__.py  build.sh  cli.py  create_databases.py  custom_types.py  dlx.py  dlx_solver.py  gui.py  human_solver.py  killer_sudoku.py  main.py  np_candidates.py  paths.py  pyproject.toml  pytest.ini  requirements.txt  save_manager.py  settings.py  settings.toml  sudoku.py  super-sudoku-solver-9999.ebuild  super-sudoku-solver-save-manager.desktop  super-sudoku-solver.desktop  techniques.py  test.py  test_dlx_solver.py  test_human_solver.py  test_human_solver_recursive.py  test_utils.py  types.py  untitled.ui  utils.py
puzzles/: puzzles.json
src/: dlx_solver.py  human_solver.py  main.py  np_candidates.py  paths.py  save_manager.py  settings.py  techniques.py
src/super_sudoku_solver/: __main__.py  custom_types.py  dlx_solver.py  entry_points.py  gui.py  human_solver.py  np_candidates.py  paths.py  puzzles.json  save_manager.py  settings.py  settings.toml  sudoku.py  techniques.py
super_sudoku_solver/: __main__.py  custom_types.py  entry_points.py  gui.py  save_manager.py  settings.py  setup.py  sudoku.py  techniques.py  utils.py
tests/: test.py  test_dlx_solver.py  test_human_solver.py  test_human_solver_recursive.py  test_np_candidates.py  test_techniques.py  test_techniques_recursive.py  test_utils.py
tests/data/: test_human_solver_data.py  test_np_candidates_data.py  test_techniques_data.py
