[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super_sudoku_solver"
version = "1.0.0"
dependencies = [
  "iniconfig==2.1.0",
  "numpy==2.4.4",
  "pytest==8.4.1",
  "jsonschema==4.26.0",
  "PySide6==6.10.2",
  "appdirs==1.4.4",
]

[project.scripts]
super-sudoku-solver = "super_sudoku_solver.__main__:main"
