[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super_sudoku_solver"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
  "iniconfig==2.1.0",
  "numpy==2.4.4",
  "jsonschema==4.26.0",
  "PySide6==6.10.2",
  "appdirs==1.4.4",
]

[project.optional-dependencies]
test = ["pytest==8.4.1"]

[project.gui-scripts]
super-sudoku-solver = "super_sudoku_solver.__main__:main"
