[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super_sudoku_solver"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
  "iniconfig==2.1.0",
  "numpy==2.4.4",
  "jsonschema==4.26.0",
  "PySide6==6.10.2",
  "platformdirs==4.9.6",
]

[project.optional-dependencies]
test = ["pytest==9.0.3"]

[project.gui-scripts]
# Generate script called super-sudoku-solver that runs main function from super-sudoku-solver.__main__
# As an alternative to running module directly with `python -m super_sudoku_solver`
super-sudoku-solver = "super_sudoku_solver.entry_points:main"
